--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=myusername
-DB_PASS=mypassword
-DB_NAME=mydatabase
+DB_HOST=138.197.31.239
+DB_USER=AN
+DB_PASS=COPEE4331C
+DB_NAME=COP4331
